# k8s-entity-provider

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: github-actions-demo.yml  rust.yml
ci/gitlab-push-trigger/: gitlab-secret-push.yaml
ci/gitlab-push-trigger/ci-cd/: Kptfile  README.md  Trigger-push.yaml  TriggerBinding-push.yaml  TriggerTemplate-push.yaml  docker-credentials-registtry-sec.yaml  event-listener.yaml  gitlab-secret-webhook.yaml  package-context.yaml  pipeline-release-push-kaniko.yaml  resourcegroup.yaml  route.yaml
ci/gitlab-push-trigger/ci-cd/tasks/: Kptfile  README.md  git-clone.yaml  kaniko.yaml  kpt-deploy.yaml  package-context.yaml  resourcegroup.yaml  rust-build.yaml  rust-test.yaml
config/: base.yaml  local.yaml  production.yaml
deploy/kpt/prod/axyom-backstage-provider/: Kptfile  configmap.yaml  deployment.yaml  rbac-tekton.yaml  service.yaml  serviceaccount.yaml
deploy/kpt/prod/backstage-provider/: README.md
docker/: Dockerfile
src/: ax_types.rs  configuration.rs  errors.rs  lib.rs  main.rs  startup.rs
src/ax_kube/: apigroup.rs  client.rs  discovery.rs  mod.rs  utils.rs  watch.rs  watch_event.rs
src/backstage/: entities.rs  ingest.rs  mod.rs
src/routes/: mod.rs  version.rs
src/routes/api/v1/: entities.rs
