[package]
name = "k8s_entity_provider"
version = "0.2.0"
edition = "2021"

[features]
runtime = []

[dependencies]
actix-web = "4"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
config = { version = "0.14.1", default-features = false, features = ["yaml"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.15"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9"
serde-aux = "4"
semver = { version = "1.0.21"}
# rustls = "0.21.0"
kube = { version = "1.1.0", default-features = false, features = [
    "runtime",
    "derive",
    "client",
    "rustls-tls",
    "ring"
] }
k8s-openapi = { version = "0.25.0", features = ["v1_31"] }
anyhow = "1.0.93"
itertools = "0.13.0"
futures = "0.3.31"
valuable = "0.1"
regex = {version = "1.11.1"}
# reqwest = { version = "^0.11", features = ["json"] }
# cloudevents-sdk = { version = "0.7.0", features = ["reqwest"]}
# chrono = { version = "0.4"}
http = { version = "1.1.0"}
thiserror = "2.0.12"
url = "2.5.4"
once_cell = "1.20.2"
rand = "0.9.1"

[dev-dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
once_cell = "1.20.2"
